Prevent zoom on iOS

--- a/public/global.css
+++ b/public/global.css
@@ -10,6 +10,10 @@ body {
 	height: 100%;
 }
 
+html {
+    -webkit-text-size-adjust: none
+}
+
 body {
 	color: #333;
 	margin: 0;
